assets/css/style.css
html {
	background-image: url("./assets/images/parthenon.png");
}

h1.display-3 {
	font-size: 50px;
	text-align: center;
	padding: 0px;
	font-color: #000000;

}


.jumbotron-fluid {
	padding: 10px;
	font-family: 'Caesar Dressing', cursive;
	background: #ffffff;
}

.img-fluid {
	max-width: 100%; 
	height: auto;
}

p {
	font-family: 'Open Sans Condensed', sans-serif;
	margin: 15px;
}



footer {
	position: absolute;
	bottom:0;
	width:100%;
	

	
}

